--- a/search.html
+++ b/search.html
@@ -3,20 +3,17 @@ layout: default
 ---
 
 <div class="search container max-width-2">
-		<div id="search-container">
-			<h3 class="center mb3 blue">Chowdown Search</h3>
-		<input type="text" id="search-input" placeholder="search titles or ingredients...">
-		</div>
+    <div id="search-container">
+        <h3 class="center mb3 orange">{{ site.translation[site.language].search }}</h3>
+        <input type="text" id="search-input" placeholder="{{ site.translation[site.language].searchHelp }}">
+    </div>
 </div>
 
 <div class="clearfix">
-<div class="recipes xs-px1 xs-mt2 center" id="results-container">
+    <div class="recipes xs-px1 xs-mt2 center" id="results-container">
 
+    </div>
 </div>
-</div>
-
-
-
 
 
 <!-- Script pointing to search-script.js -->
@@ -24,20 +21,32 @@ layout: default
 
 <!-- Configuration -->
 <script>
-SimpleJekyllSearch({
-  searchInput: document.getElementById('search-input'),
-  resultsContainer: document.getElementById('results-container'),
-  json: '{{site.baseurl}}/search.json',
-  searchResultTemplate: '<div class="sm-col sm-col-6 md-col-6 lg-col-4 xs-px1 xs-mb2 left-align"><a class="block relative bg-orange" href="{url}"><div class="image ratio bg-cover" style="background-image:url({image});"></div><h1 class="title p2 m0 absolute bold white bottom-0 left-0">{title}</h1></a></div>'
-})
+    window.jekyll_search = SimpleJekyllSearch({
+        searchInput: document.getElementById('search-input'),
+        resultsContainer: document.getElementById('results-container'),
+        json: '{{site.baseurl}}/search.json',
+        searchResultTemplate: '<div class="sm-col sm-col-6 md-col-6 lg-col-4 xs-px1 xs-mb2 left-align"><a class="block relative bg-orange" href="{url}"><div class="image ratio bg-cover" style="background-image:url({image});"></div><h1 class="title p2 m0 absolute bold white bottom-0 left-0">{title}</h1></a></div>'
+    })
 </script>
 
 <script>
-	$( document ).ready(function() {
-    $('#search-input').on('input', function() {
-    	currentHeight = $('#search-container').outerHeight();
-      $('.search').addClass('used').css('height', currentHeight);
-	});
-	});
-	
+    function animateSearch() {
+        let currentHeight = $('#search-container').outerHeight();
+        $('.search').addClass('used').css('height', currentHeight);
+    }
+
+    $(document).ready(function () {
+        const query = new URLSearchParams(window.location.search).get("q");
+        const searchInput = $('#search-input');
+
+        if(!!query) {
+            setTimeout(() => {
+                searchInput.val(query);
+                window.jekyll_search.search(query);
+                animateSearch();
+            }, 300)
+        }
+
+        searchInput.on('input', animateSearch);
+    });
 </script>
