--- a/search.html
+++ b/search.html
@@ -1,25 +1,18 @@
 ---
 layout: default
 ---
-
 <div class="search container max-width-2">
     <div id="search-container">
         <h3 class="center mb3 orange">{{ site.translation[site.language].search }}</h3>
-        <input type="text" id="search-input" placeholder="{{ site.translation[site.language].searchHelp }}">
+        <input type="text" autofocus id="search-input" placeholder="{{ site.translation[site.language].searchHelp }}">
     </div>
 </div>
 
 <div class="clearfix">
-    <div class="recipes xs-px1 xs-mt2 center" id="results-container">
-
-    </div>
+    <div class="recipes xs-px1 xs-mt2 center" id="results-container"></div>
 </div>
 
-
-<!-- Script pointing to search-script.js -->
 <script src="{{site.baseurl}}/plugins/simple-jekyll-search.min.js" type="text/javascript"></script>
-
-<!-- Configuration -->
 <script>
     window.jekyll_search = SimpleJekyllSearch({
         searchInput: document.getElementById('search-input'),
@@ -27,9 +20,7 @@ layout: default
         json: '{{site.baseurl}}/search.json',
         searchResultTemplate: '<div class="sm-col sm-col-6 md-col-6 lg-col-4 xs-px1 xs-mb2 left-align"><a class="block relative bg-orange" href="{url}"><div class="image ratio bg-cover" style="background-image:url({image});"></div><h1 class="title p2 m0 absolute bold white bottom-0 left-0">{title}</h1></a></div>'
     })
-</script>
-
-<script>
+    
     function animateSearch() {
         let currentHeight = $('#search-container').outerHeight();
         $('.search').addClass('used').css('height', currentHeight);
